# pinsilico

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD_PROMPT.md  CHANGELOG.md  LICENSE  Makefile  README.md  eslint.config.js  pnpm-lock.yaml
.github/workflows/: auto-release.yml  ci.yml  release.yml  update-binaries-lock.yml
app/: .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  sidecar.rs
app/src-tauri/tests/: smoke.rs
app/src/components/: ErrorBoundary.tsx  ResultsCard.tsx  StatusBar.tsx  Toolbar.tsx  Viewport.tsx  Workspace.tsx
app/src/components/dialogs/: AddLigandDialog.tsx  AddProteinDialog.tsx  DockingDialog.tsx  FixerDialog.tsx  SettingsDialog.tsx
app/src/components/panels/: LigandPanel.tsx  ProteinPanel.tsx  SimPanel.tsx  panels.test.tsx
app/src/components/scene/arena/: Arena.tsx  Particle.tsx  PocketMarker.tsx  ProteinShell.tsx  arena.test.tsx
app/src/components/scene/molstar/: MolstarViewer.tsx  loadPlugin.ts  molstar.test.tsx  representations.ts  trajectory.ts
app/src/lib/: api.test.ts  api.ts  brownian-shader.test.ts  brownian-shader.ts  example_kit.ts  renderer.test.ts  renderer.ts  tauri.ts  updater.test.ts  updater.ts  version.test.ts  version.ts
app/src/stores/: scene.ts  session.ts  settings.ts  stores.test.ts
app/src/tests/: setup.ts
docs/: api.md  architecture.md  fpocket.md  physics-model.md  releasing.md
fragments/lockfile-fragment-linux-x86_64/: binaries.lock.json
fragments/lockfile-fragment-macos-arm64/: binaries.lock.json
fragments/lockfile-fragment-windows-x86_64/: binaries.lock.json
scripts/: binaries.lock.json  build_app.sh  build_fpocket_from_source.sh  build_sidecar.py  build_vina_from_source.sh  fetch_binaries.py  generate_latest_json.py  merge_lockfile_fragments.py  refresh_binaries_lock.sh  release.py
sidecar/: pyproject.toml
sidecar/pinsilico/: __init__.py  __main__.py  auth.py  config.py  errors.py  logs.py  server.py
sidecar/pinsilico/db/: __init__.py  alphafold.py  base.py  chembl.py  drugbank.py  pubchem.py  rcsb_pdb.py  uniprot.py
sidecar/pinsilico/docking/: __init__.py  base.py  boltz.py  diffdock.py  smina_vina.py
sidecar/pinsilico/io/: __init__.py  media.py  pdb.py  sdf.py
sidecar/pinsilico/pocket/: __init__.py  base.py  fpocket.py
sidecar/pinsilico/routes/: __init__.py  db.py  docking.py  pocket.py  session.py  sim.py
sidecar/pinsilico/session/: __init__.py  bundle.py
sidecar/pinsilico/sim/: __init__.py  concentration.py  engine.py  rules.py
sidecar/tests/unit/: test_auth.py  test_config.py  test_db_alphafold.py  test_db_chembl.py  test_db_drugbank.py  test_db_pubchem.py  test_db_rcsb.py  test_db_uniprot.py  test_docking_optional.py  test_docking_smina.py  test_errors.py  test_fetch_binaries.py  test_generate_latest_json.py  test_health.py  test_io_media.py  test_io_pdb.py  test_io_sdf.py  test_logs.py  test_merge_lockfile.py  test_pocket_fpocket.py  test_release_script.py  test_routes_db.py  test_routes_pocket_sim.py  test_session_bundle.py  test_shutdown.py  test_sim_concentration.py  test_sim_engine.py  test_sim_rules.py
