[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pinsilico-sidecar"
version = "0.0.1"
description = "PInSilico Python sidecar: FastAPI server wrapping chemistry, docking, pocket detection, and Brownian simulation."
readme = { file = "../README.md", content-type = "text/markdown" }
license = { file = "../LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Ariorad Moniri", email = "moniriario@gmail.com" },
]
keywords = ["docking", "pocket-detection", "fpocket", "smina", "vina", "brownian-dynamics", "drug-discovery"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]

# Phase 0 pins only what Phase 0 needs. Subsequent phases add their own
# pins to this list with a one-line comment explaining the phase.
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.29,<0.32",
  "structlog>=24.1,<25",
  "pydantic>=2.7,<3",
  # Phase 1 — IO parsers
  "biopython>=1.83,<2",
  # rdkit-pypi 2024.3.x wheels available for all 3 OSes on py3.11
  "rdkit>=2024.3,<2025",
  # Phase 2 — DB clients
  "httpx>=0.27,<0.29",
  "requests>=2.32,<3",
  "requests-cache>=1.2,<2",
  # Phase 12 — bundled native binaries via PyPI wheels (cross-platform).
  # imageio-ffmpeg ships pre-built ffmpeg for Linux/macOS-intel/macOS-arm64/
  # Windows in a single wheel; replaces the per-platform ffmpeg entries
  # that used to live in scripts/binaries.lock.json.
  "imageio-ffmpeg>=0.5,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
  "pytest-asyncio>=0.23,<0.25",
  "hypothesis>=6.100,<7",
  "respx>=0.21,<0.23",
  "httpx>=0.27,<0.29",      # used by FastAPI TestClient (starlette ≥ 0.37)
  "ruff>=0.5,<0.13",
  "mypy>=1.10,<2",
]

[project.scripts]
pinsilico-sidecar = "pinsilico.__main__:main"

[project.urls]
Homepage = "https://github.com/ArioMoniri/pinsilico"
Issues = "https://github.com/ArioMoniri/pinsilico/issues"
Source = "https://github.com/ArioMoniri/pinsilico"

[tool.hatch.build.targets.wheel]
packages = ["pinsilico"]

# -----------------------------------------------------------------------------
# Ruff — lint + format. Phase 0 turns on a broad rule set so Phase 1+ code lands
# already clean. The selection matches BUILD_PROMPT.md §5 (zero warnings).
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["pinsilico", "tests"]
extend-exclude = ["resources/", "*.spec"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",         # pyflakes
  "I",         # isort
  "B",         # bugbear
  "UP",        # pyupgrade
  "ASYNC",     # async correctness
  "S",         # bandit
  "C4",        # comprehensions
  "PIE",       # idioms
  "PT",        # pytest
  "BLE",       # bare except / overly-broad except (with allow-noqa)
  "RET",       # return rules
  "SIM",       # simplify
  "TID",       # tidy imports
  "ARG",       # unused args
  "PTH",       # pathlib
  "ERA",       # eradicate commented-out code
  "PL",        # pylint subset
  "RUF",       # ruff-specific
]
ignore = [
  "E501",       # line length handled by formatter
  "PLR0913",    # FastAPI route handlers take many args by design
  "S101",       # asserts are fine in tests; per-file-ignore for app code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"pinsilico/__main__.py" = ["T201"]  # CLI may print

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -----------------------------------------------------------------------------
# Mypy — strict, no exceptions. BUILD_PROMPT.md §5 forbids unexplained
# `# type: ignore`. Use `# type: ignore[<code>]  # <why>` if absolutely needed.
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_decorators = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["pinsilico", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false  # pytest fixtures

[[tool.mypy.overrides]]
# Biopython has no type stubs and won't until upstream ships .pyi files.
# Tolerate untyped calls in modules that wrap it; the public adapter in
# pinsilico.io.pdb is fully typed at the boundary.
module = ["Bio.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# rdkit's bundled stubs are partial. Same treatment as Biopython.
module = ["rdkit", "rdkit.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# imageio-ffmpeg has no type stubs.
module = ["imageio_ffmpeg", "imageio_ffmpeg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Modules that import the above need to relax disallow_untyped_calls,
# otherwise every wrapper call counts as a type error.
module = ["pinsilico.io.pdb", "pinsilico.io.sdf"]
disallow_untyped_calls = false

# -----------------------------------------------------------------------------
# Pytest — coverage gates per BUILD_PROMPT.md §5. Phase 0 starts at the global
# 85 % bar; Phase 4 raises specific modules to 95 % via `--cov-config`.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=pinsilico",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-branch",
  "--cov-fail-under=85",
]
markers = [
  "live_network: tests that hit real upstream APIs (nightly only; allowed to fail)",
  "slow: tests slower than 1 s",
]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic",
]

[tool.coverage.run]
branch = true
source = ["pinsilico"]
omit = ["pinsilico/__main__.py"]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@overload",
]
show_missing = true
skip_covered = false
