[package]
name = "pinsilico-app"
version = "1.7.1"
description = "PInSilico Tauri 2.x desktop shell."
authors = ["Ariorad Moniri <moniriario@gmail.com>"]
license = "MIT"
repository = "https://github.com/ArioMoniri/pinsilico"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pinsilico_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "pinsilico-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# (Phase 0 smoke tests live alongside the lib; no extra deps needed yet.)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
